# qwen-dev-cli

./: .env.example  .gitignore  AUDIT_REPORT.md  BASH_EXECUTION_HARDENING_COMPLETE.md  CONSTITUTIONAL_VALIDATION.md  DEVSQUAD_TRACKER.md  Dockerfile  MASTER_PLAN.md  MASTER_PLAN_V2.md  PHASE_0_1_2_COMPLETE_REPORT.md  PLATFORM_INTEGRATION_PLAN.md  README.md  SCIENTIFIC_VALIDATION.md  SCIENTIFIC_VALIDATION_WEEK4_DAY4.md  VALIDATION_COMPLETE_IMPECABLE.md  WEEK3_DAY1_COMPLETE.md  ai_agent_cloud_comparison.md  comparison_table.md  prometheus_entry.py  pyproject.toml  pytest.ini  requirements.txt  test_phase2_integration.py
.archive/: ARCHIVE.md
docs/: BRUTAL_TRUTH_DIAGNOSTIC.md  CODE_REVIEW_RESOLUTION.md  CYBERPUNK_UI_IMPLEMENTATION_PLAN.md  DAY7_VALIDATION_REPORT.md  DIRECTORY_STRUCTURE.md  GEMINI_3_PRO_OPTIMIZATION_STRATEGY.md  INDEX.md  MASTER_PLAN.md  PROMETHEUS_ARCHITECTURE.md  SCALE_SUSTAIN_ANALYSIS.md  SCALE_SUSTAIN_IMPLEMENTATION_PLAN.md  TUI_IMPLEMENTATION_METRICS.md  day6_complete.md  sambanova_research.md
examples/: .qwenrc.hooks  enhanced_shell_demo.py  polish_demo.py  tui_demo.py
gradio_ui/: __init__.py  app.py  app.py.backup-5.49  cli_bridge.py  components.py  components.py.backup-1763768781  config.py  cyber_theme.css  heroic_theme.py  prometheus_bridge.py  prometheus_components.py  streaming_bridge.py
jdev_cli/: shell_main.py
jdev_tui/: app.py
juan_dev_sdk/: pyproject.toml
juan_dev_sdk/examples/: custom_agent.py  custom_plugin.py  custom_tool.py
juan_dev_sdk/src/juan_dev_sdk/: __init__.py  agents.py  client.py  plugins.py  tools.py  types.py
(+374 files in other folders)
