[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "juan-dev-sdk"
version = "0.1.0"
description = "SDK for building extensions and integrations with Juan Dev Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "JuanCS Dev", email = "juancs@example.com" }
]
keywords = [
    "ai", "coding-assistant", "sdk", "llm", "agents"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "httpx>=0.25.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://github.com/juancs/juan-dev-code"
Documentation = "https://github.com/juancs/juan-dev-code/docs"
Repository = "https://github.com/juancs/juan-dev-code"

[tool.hatch.build.targets.wheel]
packages = ["src/juan_dev_sdk"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/examples",
]
